--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@ main {
   &:nth-child(4) { left: calc(50% + 220px); }
   &:nth-child(5) { left: calc(50% + 440px); }
   &:nth-child(6) { left: calc(50% + 660px); opacity: 0; }
+  &:hover {
+    background-color: rgba(0,0,0,0.3);
+    transition: background 0.4s ease, transform 0.4s ease;
+    transform: scale(1.05);
+}
+
 }
 
 .content {
@@ -86,7 +92,7 @@ main {
     cursor: pointer;
   }
   &:hover {
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(0,0,0,0.3);
     transition: background 0.4s ease, transform 0.4s ease;  /* Add 's' for seconds */
 }
 
