--- a/style.css
+++ b/style.css
@@ -84,7 +84,14 @@ main {
     border-radius: 0.25rem;
     padding: 0.75rem;
     cursor: pointer;
+    
   }
+  &:hover {
+    background-color: rgba(0,0,0,0.6); 
+    transform: scale(1.05);/* Background color change */
+    transition: background 0.4s ease, transform 0.4s ease;  
+}
+
 }
 
 .item:nth-of-type(2) .content {
